// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RxMiddleware handles Flux standard actions 1`] = `
Array [
  Array [
    Object {
      "meta": Object {
        "sequence": "next",
      },
      "payload": 1,
      "type": "ACTION_TYPE",
    },
  ],
  Array [
    Object {
      "meta": Object {
        "sequence": "next",
      },
      "payload": 2,
      "type": "ACTION_TYPE",
    },
  ],
  Array [
    Object {
      "meta": Object {
        "sequence": "next",
      },
      "payload": 3,
      "type": "ACTION_TYPE",
    },
  ],
  Array [
    Object {
      "meta": Object {
        "sequence": "complete",
      },
      "type": "ACTION_TYPE",
    },
  ],
]
`;

exports[`RxMiddleware ignores non-observables 1`] = `
Array [
  Array [
    Object {
      "type": "ACTION_TYPE",
    },
  ],
]
`;
